Refactor and add docstrings in graycode functions.

--- a/python-libs/Makefile
+++ b/python-libs/Makefile
@@ -1,4 +1,4 @@
 
-bits:
-	python -m doctest -v bits.py
-	python -m doctest -v graycodes.py
+doctests:
+	python3.5 -m doctest -v bits.py
+	python3.5 -m doctest -v graycodes.py
