Add the `PYTHONPATH` variable before raising the jupyter server.

--- a/tutorials/Makefile
+++ b/tutorials/Makefile
@@ -1,3 +1,3 @@
 
 serve-fatberry.disia.unifi.it:
-	jupyter-notebook --no-browser --port=5901 --ip=150.217.37.116
+	PYTHONPATH=../python-libs/ jupyter-notebook --no-browser --port=5901 --ip=150.217.37.116
