Remove stuff from notebook about backtracking, leave there only those dirty definitions in order to have them for memory.

--- a/tutorials/Makefile
+++ b/tutorials/Makefile
@@ -1,3 +1,6 @@
 
+serve-localhost:
+	PYTHONPATH=../python-libs/ jupyter-notebook --no-browser
+
 serve-fatberry.disia.unifi.it:
 	PYTHONPATH=../python-libs/ jupyter-notebook --no-browser --port=5901 --ip=150.217.37.116
